fix sidebar nav on mobile

--- a/index.css
+++ b/index.css
@@ -228,7 +228,6 @@ header a {
   margin: 0;
 }
 
-/* TODO: fix this */
 #sidebar_nav {
   background-color: var(--main-colour);
   border-right: 1px solid black;
@@ -247,8 +246,8 @@ header a {
   padding: 0
 }
 
-#sidebar_nav li {
-  width: 100%;
+#sidebar_nav a {
+  width: auto;
 }
 
 #hero_img {
@@ -319,6 +318,7 @@ header a {
 
 .event_listing h3 {
   text-align: center;
+  margin: 1rem;
 }
 
 .event_listing p {
@@ -447,6 +447,7 @@ footer ul {
     display: flex;
     height: var(--header-top-height);
     padding: auto;
+    border-bottom: 1px solid black;
   }
 
   .header_wrapper {
